# loom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  run.py
data/: shakespeare.txt
docs/: index.html
docs/pysrc/loom/: __init__.py  checkpoint.py  layers.py  model.py
docs/weights/: loom-shakespeare.npz
src/loom/: model.py  optim.py  sample.py  tokenizer.py  train.py
tests/: test_gradients.py  test_model.py  test_tokenizer_ckpt_optim.py
