[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-gpt"
version = "0.1.0"
description = "A GPT from scratch in pure NumPy — every gradient derived by hand and checked numerically, with an in-browser attention visualizer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Hritik Datta" }]
keywords = ["gpt", "transformer", "numpy", "backpropagation", "from-scratch", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
loom-train = "loom.train:main"
loom-sample = "loom.sample:main"

[project.urls]
Homepage = "https://github.com/Hritikd/loom"
Demo = "https://hritikd.github.io/loom/"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
